# flare-dht

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.adoc  TODO.adoc  build.rs  docker-compose.yml  justfile  raft-note.adoc  todo.adoc
examples/: flare_clean.rs  flare_client.rs  flare_data_gen.rs  raft-single.rs
flare-cli/: Cargo.toml
flare-cli/benches/: write_benchmark.rs
flare-cli/examples/: bench_kv.rs  create_collection.rs
flare-cli/src/: lib.rs  main.rs
flare-dht/: Cargo.toml
flare-dht/benches/: write_benchmark.rs
flare-dht/examples/: bench_kv.rs  bench_set.rs  create_collection.rs  flare_clean.rs  flare_create_collection.rs  flare_data_gen.rs
flare-dht/src/: cli.rs  cluster.rs  error.rs  lib.rs  main.rs  pool.rs  util.rs
flare-dht/src/metadata/: mod.rs  network.rs  state_machine.rs  store.rs
flare-dht/src/metadata/raft/: mod.rs  network.rs  rpc.rs  state_machine.rs  store.rs  test.rs
flare-dht/src/pool/: conn.rs  grpc.rs  mod.rs
flare-dht/src/raft/: generic.rs  log.rs  mod.rs  rpc.rs  state_machine.rs
flare-dht/src/rpc_server/: control_api.rs  kv_api.rs  mod.rs  raft_api.rs
flare-dht/src/shard/: hashmap.rs  manager.rs  mod.rs  remote.rs
flare-dht/src/shard_raft/: mod.rs
flare-pb/: Cargo.toml  build.rs
flare-pb/proto/: flare-common.proto  flare-kv.proto  flare-mgnt.proto
flare-pb/src/: lib.rs
flare-runner/: Cargo.toml
flare-runner/benches/: write_benchmark.rs
flare-runner/src/: lib.rs  main.rs
flare-zrpc/: Cargo.toml
flare-zrpc/src/: client.rs  error.rs  lib.rs  msg.rs  server.rs  service.rs
flare-zrpc/src/bincode/: mod.rs
flare-zrpc/src/bitcode/: mod.rs
flare-zrpc/src/msg/: mod.rs
flare-zrpc/src/prost/: mod.rs
flare-zrpc/src/server/: concurrent.rs  mod.rs  non_sync.rs  sync.rs
flare-zrpc/tests/: integration_test.rs  integration_test_v2.rs
proto/: flare-common.proto  flare-kv.proto  flare-mgnt.proto
src/: cluster.rs  dht.rs  lib.rs  main.rs  proto.rs  shard.rs  test.rs  types.rs  util.rs
src/kv/: mod.rs  network.rs  state_machine.rs  store.rs
src/metadata/: mod.rs  network.rs  network_tarpc.rs  state_machine.rs  test.rs
src/network/: control_api.rs  kv_api.rs  mod.rs  raft_api.rs
src/raft/: log.rs  mod.rs  network.rs  store.rs
src/rpc_server/: control_api.rs  kv_api.rs  mod.rs  raft2.rs  raft_api.rs
src/shard/: hashmap.rs  mod.rs  raft.rs
src/shard_raft/: mod.rs  network.rs  store.rs
src/store/: mod.rs
