[workspace]
resolver = "2"
members = [ 
    "flare-dht", 
    "flare-pb",
    "flare-cli", 
    "flare-zrpc"]


[workspace.package]
authors = ["Pawissanutt Lertpongrujikorn <pawissanutt@gmail.com>"]
version = "0.1.22"
edition = "2021"
repository = "https://github.com/pawissanutt/flare-dht"
license = "Apache-2.0"
rust-version = "1.81"


[workspace.dependencies]
flare-dht = {version = "0.1.22", path = "flare-dht"}
flare-pb = {version = "0.1.22", path = "flare-pb"}
flare-zrpc = {version = "0.1.22", path = "flare-zrpc"}
flare-cli = {version = "0.1.22", path = "flare-cli"}
async-trait = {version = "0.1"}
anyerror = { version = "0.1"}
bincode = {version = "2.0.0-rc.3", features = ["serde"]}
bitcode = { version = "0.6"}
bytes ={ version = "1", features = ["serde"]}
flume ={ version = "0.11"}
hashbrown = "0.15"
prost = "0.13"
prost-types = "0.13"
thiserror = "2"
scc = { version = "2.3"}
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
tonic = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", ] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util ={ version = "0.7"}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zenoh ={ version = "1.1"}
zenoh-config = {version = "1.1"}
