[package]
name = "flare-dht"
description = "The learning project to create the distributed KV database in Rust language."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
"default" = ["cluster"]
"cluster" = []
"raft" = ["dep:openraft"]

[dependencies]
# dashmap = "6.1"
flare-pb = {workspace=true}
tonic = {workspace=true}
tonic-reflection = { version = "0.12", features = ["server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
openraft = { version = "0.9", features = ["serde", "storage-v2"], optional = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
clap = {version = "4.5", features = ["env"]}
serde = { version = "1.0", features = ["derive"] }
rkyv = { version = "0.8", features = ["alloc", "std", "hashbrown-0_15"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
thiserror = "2"
rancor = "0.1"
rand = "0.8"
mur3 = "0.1"
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
http = "1.2"
bytes={version = "1.9", features = []}
hashbrown = "0.15"
mobc = "0.8"
scc = { version = "2.2", features = [] }

[profile.release]
lto = true
codegen-units = 1
