[package]
name = "flare-pb"
description = "The protobuf data types for flare-dht"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
prost = {workspace=true}
prost-types = {workspace=true}
tonic = {workspace=true}
# bytes={version = "1.7", features = ["serde"]}
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }