[package]
name = "flare-pb"
description = "The protobuf data types for flare-dht"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
prost = {workspace=true}
prost-types = {workspace=true}
tonic = {workspace=true}
serde = {workspace=true}

[build-dependencies]
tonic-build = {workspace=true, features = ["prost"] }