[package]
name = "flare-runner"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]

[dependencies]
# flare-pb = {workspace = true}
flare-dht = {workspace = true, features = ["raft"]}
clap = {version = "4.5", features = ["env"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tonic = {workspace=true}
tonic-reflection = { version = "0.12", features = ["server"] }
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures", "async_tokio", "html_reports", "tokio"] }
rlt = {version = "0.2.0"}
anyhow = "1.0"
tsid = "0.3"


[[bench]]
name = "write_benchmark"
harness = false