[package]
name = "flare-zrpc"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = {version = "0.1"}
zenoh = {version = "1"}
zenoh-config = {version = "1"}
serde = {version = "1", features = ["derive"]}
bincode = {version = "2.0.0-rc.3", features = ["serde"]}
tokio = { version = "1", features = ["rt-multi-thread", ] }
thiserror = "2"
tracing = "0.1.40"
bytes ={ version = "1", features = ["serde"]}
flume ={ version = "0.11"}
# anyhow = {version = "1"}

[dev-dependencies]
anyhow = "1"
pretty_assertions = "1"
tracing-test = {version = "0.2", features = ["no-env-filter"]}