[package]
name = "flare-zrpc"
description = "Simple rpc library on top of Zenoh and bincode"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = {workspace = true}
zenoh = {workspace = true}
zenoh-config = {workspace = true}
serde = {workspace = true}
bincode = {workspace = true}
tokio = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
bytes ={workspace = true}
flume ={workspace = true}
anyerror ={ version = "0.1"}

[dev-dependencies]
anyhow = "1"
pretty_assertions = "1"
tracing-test = {version = "0.2", features = ["no-env-filter"]}